src/Parser/y.output
   0  $accept : programa $end

   1  programa : ID conjunto_sentencias
   2           | error_programa

   3  conjunto_sentencias : '{' sentencias '}'
   4                      | error_conjunto_sentencias

   5  sentencias : declarativas ejecutables
   6             | ejecutables declarativas
   7             | declarativas
   8             | ejecutables

   9  declarativas : declarativas declarativa
  10               | declarativa

  11  ejecutables : ejecutables ejecutable
  12              | ejecutable

  13  declarativa : funcion ';'
  14              | tipo lista_de_variables ';'
  15              | error_declarativa

  16  tipo : UI16
  17       | F64

  18  lista_de_variables : ID
  19                     | lista_de_variables ',' ID
  20                     | error_lista_de_variables

  21  funcion : FUN ID '(' lista_parametros ')' ':' tipo '{' cuerpo_funcion '}'
  22          | error_funcion

  23  lista_parametros : parametros ',' parametro
  24                   | parametro
  25                   |
  26                   | error_lista_parametros

  27  parametros : parametro

  28  parametro : tipo ID
  29            | error_parametro

  30  cuerpo_funcion : sentencias retorno
  31                 | retorno
  32                 | error_bloque_funcion

  33  retorno : RETURN ejecucion_retorno ';'
  34          | error_retorno

  35  ejecucion_retorno : condicion
  36                    | '(' expresion ')'
  37                    | error_retorno_expresion

  38  condicion : '(' expresion comparador expresion ')'
  39            | error_condicion

  40  expresion : termino
  41            | expresion '+' termino
  42            | expresion '-' termino
  43            | TOF64 '(' expresion ')'
  44            | error_expresion

  45  termino : termino '*' '(' factor ')'
  46          | termino '/' '(' factor ')'
  47          | factor
  48          | error_termino

  49  factor : CTE_INT
  50         | CTE_DBL

  51  $$1 :

  52  factor : '-' CTE_INT $$1

  53  $$2 :

  54  factor : '-' CTE_DBL $$2
  55         | ID
  56         | invocacion

  57  invocacion : ID '(' lista_parametros_reales ')'
  58             | error_invocacion

  59  lista_parametros_reales : parametros_reales ',' parametro_real
  60                          | parametro_real
  61                          |
  62                          | error_lista_parametros_reales

  63  parametros_reales : parametro_real

  64  parametro_real : ID
  65                 | CTE_INT
  66                 | CTE_DBL

  67  comparador : MENOR_IGUAL
  68             | MAYOR_IGUAL
  69             | '='
  70             | '<'
  71             | '>'
  72             | DISTINTO

  73  ejecutable : ejecutable_comun
  74             | ejecutable_defer

  75  ejecutable_comun : asignacion
  76                   | seleccion
  77                   | mensaje_pantalla
  78                   | invocacion_discard
  79                   | expresion_dountil

  80  ejecutable_defer : DEFER ejecutable_comun

  81  asignacion : ID ASSIGN expresion ';'
  82             | error_asignacion

  83  $$3 :

  84  seleccion : IF condicion $$3 cuerpo_seleccion error_seleccion

  85  cuerpo_seleccion : THEN '{' bloque_de_sent_ejecutables '}' END_IF ';'

  86  $$4 :

  87  cuerpo_seleccion : THEN '{' bloque_de_sent_ejecutables '}' $$4 ELSE '{' bloque_de_sent_ejecutables '}' END_IF ';'

  88  bloque_de_sent_ejecutables : ejecutables

  89  mensaje_pantalla : OUT '(' CADENA ')' ';'
  90                   | OUT '(' ')' ';'
  91                   | error_mensaje_pantalla

  92  invocacion_discard : DISCARD ID '(' lista_parametros_reales ')' ';'
  93                     | error_invocacion_discard

  94  $$5 :

  95  expresion_dountil : DO $$5 cuerpo_dountil

  96  $$6 :

  97  expresion_dountil : etiqueta ':' DO $$6 cuerpo_dountil_etiqueta
  98                    | error_dountil

  99  $$7 :

 100  cuerpo_dountil : '{' bloque_de_sentencias_ejecutables '}' UNTIL condicion $$7 ':' asignacion_do_until ';'
 101                 | error_cuerpo_dountil

 102  etiqueta : ID

 103  $$8 :

 104  cuerpo_dountil_etiqueta : '{' bloque_de_sentencias_ejecutables_etiqueta '}' UNTIL condicion $$8 ':' asignacion_do_until ';'
 105                          | error_cuerpo_dountil_etiqueta

 106  asignacion_do_until : '(' ID ASSIGN expresion ')'
 107                      | error_asignacion_do_until

 108  bloque_de_sentencias_ejecutables : ejecutables BREAK ';'
 109                                   | ejecutables
 110                                   | BREAK ';'
 111                                   | error_bloque_sent_ejecutables

 112  bloque_de_sentencias_ejecutables_etiqueta : ejecutables BREAK ':' etiqueta ';'
 113                                            | BREAK ':' etiqueta ';'
 114                                            | error_bloque_de_sentencias_ejecutables_etiqueta

 115  error_programa : ID
 116                 | conjunto_sentencias

 117  error_conjunto_sentencias : '{' sentencias
 118                            | '{'
 119                            | '}'
 120                            | '{' '}'
 121                            | error sentencias
 122                            | error sentencias '}'

 123  error_declarativa : tipo lista_de_variables
 124                    | lista_de_variables ';'
 125                    | error tipo ';'
 126                    | funcion

 127  error_lista_de_variables : error ',' ID
 128                           | lista_de_variables ',' error

 129  error_funcion : ID '(' lista_parametros ')' ':' tipo '{' cuerpo_funcion '}'
 130                | FUN '(' lista_parametros ')' ':' tipo '{' cuerpo_funcion '}'
 131                | FUN ID lista_parametros ')' ':' tipo '{' cuerpo_funcion '}'
 132                | FUN ID '(' lista_parametros ':' tipo '{' cuerpo_funcion '}'
 133                | FUN ID '(' lista_parametros ')' tipo '{' cuerpo_funcion '}'
 134                | FUN ID '(' lista_parametros ')' ':' '{' cuerpo_funcion '}'
 135                | FUN ID '(' lista_parametros ')' ':' tipo cuerpo_funcion '}'
 136                | FUN ID '(' lista_parametros ')' ':' tipo '{' '}'
 137                | FUN ID '(' lista_parametros ')' ':' tipo '{' cuerpo_funcion error

 138  error_lista_parametros : parametros ',' parametro ',' error
 139                         | ',' parametro
 140                         | parametros ','
 141                         | parametros parametro

 142  error_parametro : error ID
 143                  | tipo error

 144  error_bloque_funcion : error

 145  error_retorno : RETURN ejecucion_retorno
 146                | RETURN ';'

 147  error_retorno_expresion : expresion ')'
 148                          | '(' expresion
 149                          | '(' ')'

 150  error_condicion : expresion comparador expresion ')'
 151                  | '(' comparador expresion ')'
 152                  | '(' error expresion error ')'
 153                  | '(' expresion comparador ')'
 154                  | '(' expresion comparador expresion
 155                  | '(' error ')'
 156                  | expresion comparador expresion

 157  error_expresion : expresion '+' error
 158                  | expresion '-' error
 159                  | error '+' termino
 160                  | TOF64 error expresion ')'
 161                  | TOF64 '(' expresion error
 162                  | TOF64 '(' ')'

 163  error_termino : '*' factor
 164                | termino '*'
 165                | '/' factor
 166                | termino '/'

 167  error_invocacion : ID '(' lista_parametros_reales error

 168  error_lista_parametros_reales : parametros_reales ',' parametro_real ',' error
 169                                | ',' parametro_real
 170                                | parametros_reales ','
 171                                | parametros_reales parametro_real

 172  error_asignacion : ASSIGN expresion ';'
 173                   | ID expresion ';'
 174                   | ID ASSIGN ';'
 175                   | ID ASSIGN expresion error

 176  error_seleccion : IF THEN '{' bloque_de_sent_ejecutables '}' ELSE '{' bloque_de_sent_ejecutables '}' END_IF ';'
 177                  | IF condicion '{' bloque_de_sent_ejecutables '}' ELSE '{' bloque_de_sent_ejecutables '}' END_IF ';'
 178                  | IF condicion THEN bloque_de_sent_ejecutables '}' ELSE '{' bloque_de_sent_ejecutables '}' END_IF ';'
 179                  | IF condicion THEN '{' '}' ELSE '{' bloque_de_sent_ejecutables '}' END_IF ';'
 180                  | IF condicion THEN '{' bloque_de_sent_ejecutables ELSE '{' bloque_de_sent_ejecutables '}' END_IF ';'
 181                  | IF condicion THEN '{' bloque_de_sent_ejecutables '}' '{' bloque_de_sent_ejecutables '}' END_IF ';'
 182                  | IF condicion THEN '{' bloque_de_sent_ejecutables '}' ELSE bloque_de_sent_ejecutables '}' END_IF ';'
 183                  | IF condicion THEN '{' bloque_de_sent_ejecutables '}' ELSE '{' '}' END_IF ';'
 184                  | IF condicion THEN '{' bloque_de_sent_ejecutables '}' ELSE '{' bloque_de_sent_ejecutables END_IF ';'
 185                  | IF condicion THEN '{' bloque_de_sent_ejecutables '}' ELSE '{' bloque_de_sent_ejecutables '}' ';'
 186                  | IF condicion THEN '{' bloque_de_sent_ejecutables '}' ELSE '{' bloque_de_sent_ejecutables '}' END_IF
 187                  | IF THEN '{' bloque_de_sent_ejecutables '}' END_IF ';'
 188                  | IF condicion '{' bloque_de_sent_ejecutables '}' END_IF ';'
 189                  | IF condicion THEN bloque_de_sent_ejecutables '}' END_IF ';'
 190                  | IF condicion THEN '{' '}' END_IF ';'
 191                  | IF condicion THEN '{' bloque_de_sent_ejecutables END_IF ';'
 192                  | IF condicion THEN '{' bloque_de_sent_ejecutables '}' ';'
 193                  | IF condicion THEN '{' bloque_de_sent_ejecutables '}' END_IF

 194  error_mensaje_pantalla : '(' CADENA ')' ';'
 195                         | OUT CADENA ')' ';'
 196                         | OUT '(' CADENA ';'
 197                         | OUT '(' CADENA ')'
 198                         | '(' ')' ';'
 199                         | OUT ')' ';'
 200                         | OUT '(' ';'
 201                         | OUT '(' ')'

 202  error_invocacion_discard : DISCARD '(' lista_parametros_reales ')' ';'
 203                           | DISCARD ID lista_parametros_reales ')' ';'
 204                           | DISCARD ID '(' lista_parametros_reales ';'
 205                           | DISCARD ID '(' lista_parametros_reales ')'

 206  error_dountil : error '{' bloque_de_sentencias_ejecutables '}' UNTIL condicion ':' asignacion_do_until ';'
 207                | etiqueta DO '{' bloque_de_sentencias_ejecutables_etiqueta '}' UNTIL condicion ':' asignacion_do_until ';'
 208                | ':' DO

 209  error_cuerpo_dountil : bloque_de_sentencias_ejecutables '}' UNTIL condicion ':' asignacion_do_until ';'
 210                       | '{' '}' UNTIL condicion ':' asignacion_do_until ';'
 211                       | '{' bloque_de_sentencias_ejecutables UNTIL condicion ':' asignacion_do_until ';'
 212                       | '{' bloque_de_sentencias_ejecutables '}' condicion ':' asignacion_do_until ';'
 213                       | '{' bloque_de_sentencias_ejecutables '}' UNTIL ':' asignacion_do_until ';'
 214                       | '{' bloque_de_sentencias_ejecutables '}' UNTIL condicion error asignacion_do_until ';'

 215  error_cuerpo_dountil_etiqueta : bloque_de_sentencias_ejecutables_etiqueta '}' UNTIL condicion ':' asignacion_do_until ';'
 216                                | '{' '}' UNTIL condicion ':' asignacion_do_until ';'
 217                                | '{' bloque_de_sentencias_ejecutables_etiqueta UNTIL condicion ':' asignacion_do_until ';'
 218                                | '{' bloque_de_sentencias_ejecutables_etiqueta '}' condicion ':' asignacion_do_until ';'
 219                                | '{' bloque_de_sentencias_ejecutables_etiqueta '}' UNTIL ':' asignacion_do_until ';'
 220                                | '{' bloque_de_sentencias_ejecutables_etiqueta '}' UNTIL condicion error asignacion_do_until ';'

 221  error_asignacion_do_until : ID ASSIGN expresion ')'
 222                            | '(' ASSIGN expresion ')'
 223                            | '(' ID expresion ')'
 224                            | '(' ID ASSIGN ')'
 225                            | '(' ID ASSIGN expresion error

 226  error_bloque_sent_ejecutables : ';'
 227                                | ejecutables error ';'
 228                                | ejecutables BREAK
 229                                | BREAK

 230  error_bloque_de_sentencias_ejecutables_etiqueta : ejecutables ':' etiqueta ';'
 231                                                  | ejecutables BREAK etiqueta ';'
 232                                                  | ejecutables BREAK ':' ';'
 233                                                  | ejecutables BREAK ':' etiqueta
 234                                                  | ':' etiqueta ';'
 235                                                  | BREAK etiqueta ';'
 236                                                  | BREAK ':' ';'
 237                                                  | BREAK ':' etiqueta

state 0
	$accept : . programa $end  (0)

	error  shift 1
	ID  shift 2
	'{'  shift 3
	'}'  shift 4
	.  error

	programa  goto 5
	conjunto_sentencias  goto 6
	error_programa  goto 7
	error_conjunto_sentencias  goto 8


state 1
	error_conjunto_sentencias : error . sentencias  (121)
	error_conjunto_sentencias : error . sentencias '}'  (122)

	error  shift 9
	ID  shift 10
	IF  shift 11
	OUT  shift 12
	FUN  shift 13
	UI16  shift 14
	ASSIGN  shift 15
	F64  shift 16
	DISCARD  shift 17
	DO  shift 18
	DEFER  shift 19
	'('  shift 20
	':'  shift 21
	.  error

	sentencias  goto 22
	declarativas  goto 23
	ejecutables  goto 24
	declarativa  goto 25
	ejecutable  goto 26
	funcion  goto 27
	tipo  goto 28
	lista_de_variables  goto 29
	error_declarativa  goto 30
	error_lista_de_variables  goto 31
	error_funcion  goto 32
	ejecutable_comun  goto 33
	ejecutable_defer  goto 34
	asignacion  goto 35
	seleccion  goto 36
	mensaje_pantalla  goto 37
	invocacion_discard  goto 38
	expresion_dountil  goto 39
	error_asignacion  goto 40
	error_mensaje_pantalla  goto 41
	error_invocacion_discard  goto 42
	etiqueta  goto 43
	error_dountil  goto 44


state 2
	programa : ID . conjunto_sentencias  (1)
	error_programa : ID .  (115)

	error  shift 1
	'{'  shift 3
	'}'  shift 4
	$end  reduce 115

	conjunto_sentencias  goto 45
	error_conjunto_sentencias  goto 8


state 3
	conjunto_sentencias : '{' . sentencias '}'  (3)
	error_conjunto_sentencias : '{' . sentencias  (117)
	error_conjunto_sentencias : '{' .  (118)
	error_conjunto_sentencias : '{' . '}'  (120)

	error  shift 9
	ID  shift 10
	IF  shift 11
	OUT  shift 12
	FUN  shift 13
	UI16  shift 14
	ASSIGN  shift 15
	F64  shift 16
	DISCARD  shift 17
	DO  shift 18
	DEFER  shift 19
	'}'  shift 46
	'('  shift 20
	':'  shift 21
	$end  reduce 118

	sentencias  goto 47
	declarativas  goto 23
	ejecutables  goto 24
	declarativa  goto 25
	ejecutable  goto 26
	funcion  goto 27
	tipo  goto 28
	lista_de_variables  goto 29
	error_declarativa  goto 30
	error_lista_de_variables  goto 31
	error_funcion  goto 32
	ejecutable_comun  goto 33
	ejecutable_defer  goto 34
	asignacion  goto 35
	seleccion  goto 36
	mensaje_pantalla  goto 37
	invocacion_discard  goto 38
	expresion_dountil  goto 39
	error_asignacion  goto 40
	error_mensaje_pantalla  goto 41
	error_invocacion_discard  goto 42
	etiqueta  goto 43
	error_dountil  goto 44


state 4
	error_conjunto_sentencias : '}' .  (119)

	.  reduce 119


state 5
	$accept : programa . $end  (0)

	$end  accept


state 6
	error_programa : conjunto_sentencias .  (116)

	.  reduce 116


state 7
	programa : error_programa .  (2)

	.  reduce 2


state 8
	conjunto_sentencias : error_conjunto_sentencias .  (4)

	.  reduce 4


state 9
	error_declarativa : error . tipo ';'  (125)
	error_lista_de_variables : error . ',' ID  (127)
	error_dountil : error . '{' bloque_de_sentencias_ejecutables '}' UNTIL condicion ':' asignacion_do_until ';'  (206)

	UI16  shift 14
	F64  shift 16
	'{'  shift 48
	','  shift 49
	.  error

	tipo  goto 50


state 10
	lista_de_variables : ID .  (18)
	asignacion : ID . ASSIGN expresion ';'  (81)
	etiqueta : ID .  (102)
	error_funcion : ID . '(' lista_parametros ')' ':' tipo '{' cuerpo_funcion '}'  (129)
	error_asignacion : ID . expresion ';'  (173)
	error_asignacion : ID . ASSIGN ';'  (174)
	error_asignacion : ID . ASSIGN expresion error  (175)

	error  shift 51
	ID  shift 52
	CTE_INT  shift 53
	CTE_DBL  shift 54
	ASSIGN  shift 55
	TOF64  shift 56
	'-'  shift 57
	'*'  shift 58
	'/'  shift 59
	'('  shift 60
	DO  reduce 102
	';'  reduce 18
	','  reduce 18
	':'  reduce 102

	expresion  goto 61
	termino  goto 62
	error_expresion  goto 63
	factor  goto 64
	error_termino  goto 65
	invocacion  goto 66
	error_invocacion  goto 67


state 11
	seleccion : IF . condicion $$3 cuerpo_seleccion error_seleccion  (84)

	error  shift 51
	ID  shift 52
	CTE_INT  shift 53
	CTE_DBL  shift 54
	TOF64  shift 56
	'-'  shift 57
	'*'  shift 58
	'/'  shift 59
	'('  shift 68
	.  error

	condicion  goto 69
	expresion  goto 70
	error_condicion  goto 71
	termino  goto 62
	error_expresion  goto 63
	factor  goto 64
	error_termino  goto 65
	invocacion  goto 66
	error_invocacion  goto 67


state 12
	mensaje_pantalla : OUT . '(' CADENA ')' ';'  (89)
	mensaje_pantalla : OUT . '(' ')' ';'  (90)
	error_mensaje_pantalla : OUT . CADENA ')' ';'  (195)
	error_mensaje_pantalla : OUT . '(' CADENA ';'  (196)
	error_mensaje_pantalla : OUT . '(' CADENA ')'  (197)
	error_mensaje_pantalla : OUT . ')' ';'  (199)
	error_mensaje_pantalla : OUT . '(' ';'  (200)
	error_mensaje_pantalla : OUT . '(' ')'  (201)

	CADENA  shift 72
	'('  shift 73
	')'  shift 74
	.  error


state 13
	funcion : FUN . ID '(' lista_parametros ')' ':' tipo '{' cuerpo_funcion '}'  (21)
	error_funcion : FUN . '(' lista_parametros ')' ':' tipo '{' cuerpo_funcion '}'  (130)
	error_funcion : FUN . ID lista_parametros ')' ':' tipo '{' cuerpo_funcion '}'  (131)
	error_funcion : FUN . ID '(' lista_parametros ':' tipo '{' cuerpo_funcion '}'  (132)
	error_funcion : FUN . ID '(' lista_parametros ')' tipo '{' cuerpo_funcion '}'  (133)
	error_funcion : FUN . ID '(' lista_parametros ')' ':' '{' cuerpo_funcion '}'  (134)
	error_funcion : FUN . ID '(' lista_parametros ')' ':' tipo cuerpo_funcion '}'  (135)
	error_funcion : FUN . ID '(' lista_parametros ')' ':' tipo '{' '}'  (136)
	error_funcion : FUN . ID '(' lista_parametros ')' ':' tipo '{' cuerpo_funcion error  (137)

	ID  shift 75
	'('  shift 76
	.  error


state 14
	tipo : UI16 .  (16)

	.  reduce 16


state 15
	error_asignacion : ASSIGN . expresion ';'  (172)

	error  shift 51
	ID  shift 52
	CTE_INT  shift 53
	CTE_DBL  shift 54
	TOF64  shift 56
	'-'  shift 57
	'*'  shift 58
	'/'  shift 59
	.  error

	expresion  goto 77
	termino  goto 62
	error_expresion  goto 63
	factor  goto 64
	error_termino  goto 65
	invocacion  goto 66
	error_invocacion  goto 67


state 16
	tipo : F64 .  (17)

	.  reduce 17


state 17
	invocacion_discard : DISCARD . ID '(' lista_parametros_reales ')' ';'  (92)
	error_invocacion_discard : DISCARD . '(' lista_parametros_reales ')' ';'  (202)
	error_invocacion_discard : DISCARD . ID lista_parametros_reales ')' ';'  (203)
	error_invocacion_discard : DISCARD . ID '(' lista_parametros_reales ';'  (204)
	error_invocacion_discard : DISCARD . ID '(' lista_parametros_reales ')'  (205)

	ID  shift 78
	'('  shift 79
	.  error


state 18
	expresion_dountil : DO . $$5 cuerpo_dountil  (95)
	$$5 : .  (94)

	.  reduce 94

	$$5  goto 80


state 19
	ejecutable_defer : DEFER . ejecutable_comun  (80)

	error  shift 81
	ID  shift 82
	IF  shift 11
	OUT  shift 12
	ASSIGN  shift 15
	DISCARD  shift 17
	DO  shift 18
	'('  shift 20
	':'  shift 21
	.  error

	ejecutable_comun  goto 83
	asignacion  goto 35
	seleccion  goto 36
	mensaje_pantalla  goto 37
	invocacion_discard  goto 38
	expresion_dountil  goto 39
	error_asignacion  goto 40
	error_mensaje_pantalla  goto 41
	error_invocacion_discard  goto 42
	etiqueta  goto 43
	error_dountil  goto 44


state 20
	error_mensaje_pantalla : '(' . CADENA ')' ';'  (194)
	error_mensaje_pantalla : '(' . ')' ';'  (198)

	CADENA  shift 84
	')'  shift 85
	.  error


state 21
	error_dountil : ':' . DO  (208)

	DO  shift 86
	.  error


state 22
	error_conjunto_sentencias : error sentencias .  (121)
	error_conjunto_sentencias : error sentencias . '}'  (122)

	'}'  shift 87
	$end  reduce 121


state 23
	sentencias : declarativas . ejecutables  (5)
	sentencias : declarativas .  (7)
	declarativas : declarativas . declarativa  (9)

	error  shift 9
	ID  shift 10
	IF  shift 11
	OUT  shift 12
	FUN  shift 13
	UI16  shift 14
	ASSIGN  shift 15
	F64  shift 16
	DISCARD  shift 17
	DO  shift 18
	DEFER  shift 19
	'('  shift 20
	':'  shift 21
	$end  reduce 7
	RETURN  reduce 7
	'}'  reduce 7

	ejecutables  goto 88
	declarativa  goto 89
	ejecutable  goto 26
	funcion  goto 27
	tipo  goto 28
	lista_de_variables  goto 29
	error_declarativa  goto 30
	error_lista_de_variables  goto 31
	error_funcion  goto 32
	ejecutable_comun  goto 33
	ejecutable_defer  goto 34
	asignacion  goto 35
	seleccion  goto 36
	mensaje_pantalla  goto 37
	invocacion_discard  goto 38
	expresion_dountil  goto 39
	error_asignacion  goto 40
	error_mensaje_pantalla  goto 41
	error_invocacion_discard  goto 42
	etiqueta  goto 43
	error_dountil  goto 44


state 24
	sentencias : ejecutables . declarativas  (6)
	sentencias : ejecutables .  (8)
	ejecutables : ejecutables . ejecutable  (11)

	error  shift 9
	ID  shift 10
	IF  shift 11
	OUT  shift 12
	FUN  shift 13
	UI16  shift 14
	ASSIGN  shift 15
	F64  shift 16
	DISCARD  shift 17
	DO  shift 18
	DEFER  shift 19
	'('  shift 20
	':'  shift 21
	$end  reduce 8
	RETURN  reduce 8
	'}'  reduce 8

	declarativas  goto 90
	declarativa  goto 25
	ejecutable  goto 91
	funcion  goto 27
	tipo  goto 28
	lista_de_variables  goto 29
	error_declarativa  goto 30
	error_lista_de_variables  goto 31
	error_funcion  goto 32
	ejecutable_comun  goto 33
	ejecutable_defer  goto 34
	asignacion  goto 35
	seleccion  goto 36
	mensaje_pantalla  goto 37
	invocacion_discard  goto 38
	expresion_dountil  goto 39
	error_asignacion  goto 40
	error_mensaje_pantalla  goto 41
	error_invocacion_discard  goto 42
	etiqueta  goto 43
	error_dountil  goto 44


state 25
	declarativas : declarativa .  (10)

	.  reduce 10


state 26
	ejecutables : ejecutable .  (12)

	.  reduce 12


state 27
	declarativa : funcion . ';'  (13)
	error_declarativa : funcion .  (126)

	';'  shift 92
	$end  reduce 126
	error  reduce 126
	ID  reduce 126
	IF  reduce 126
	RETURN  reduce 126
	OUT  reduce 126
	FUN  reduce 126
	UI16  reduce 126
	ASSIGN  reduce 126
	F64  reduce 126
	DISCARD  reduce 126
	DO  reduce 126
	DEFER  reduce 126
	'}'  reduce 126
	'('  reduce 126
	':'  reduce 126


state 28
	declarativa : tipo . lista_de_variables ';'  (14)
	error_declarativa : tipo . lista_de_variables  (123)

	error  shift 93
	ID  shift 94
	.  error

	lista_de_variables  goto 95
	error_lista_de_variables  goto 31


state 29
	lista_de_variables : lista_de_variables . ',' ID  (19)
	error_declarativa : lista_de_variables . ';'  (124)
	error_lista_de_variables : lista_de_variables . ',' error  (128)

	';'  shift 96
	','  shift 97
	.  error


state 30
	declarativa : error_declarativa .  (15)

	.  reduce 15


state 31
	lista_de_variables : error_lista_de_variables .  (20)

	.  reduce 20


state 32
	funcion : error_funcion .  (22)

	.  reduce 22


state 33
	ejecutable : ejecutable_comun .  (73)

	.  reduce 73


state 34
	ejecutable : ejecutable_defer .  (74)

	.  reduce 74


state 35
	ejecutable_comun : asignacion .  (75)

	.  reduce 75


state 36
	ejecutable_comun : seleccion .  (76)

	.  reduce 76


state 37
	ejecutable_comun : mensaje_pantalla .  (77)

	.  reduce 77


state 38
	ejecutable_comun : invocacion_discard .  (78)

	.  reduce 78


state 39
	ejecutable_comun : expresion_dountil .  (79)

	.  reduce 79


state 40
	asignacion : error_asignacion .  (82)

	.  reduce 82


state 41
	mensaje_pantalla : error_mensaje_pantalla .  (91)

	.  reduce 91


state 42
	invocacion_discard : error_invocacion_discard .  (93)

	.  reduce 93


state 43
	expresion_dountil : etiqueta . ':' DO $$6 cuerpo_dountil_etiqueta  (97)
	error_dountil : etiqueta . DO '{' bloque_de_sentencias_ejecutables_etiqueta '}' UNTIL condicion ':' asignacion_do_until ';'  (207)

	DO  shift 98
	':'  shift 99
	.  error


state 44
	expresion_dountil : error_dountil .  (98)

	.  reduce 98


state 45
	programa : ID conjunto_sentencias .  (1)

	.  reduce 1


state 46
	error_conjunto_sentencias : '{' '}' .  (120)

	.  reduce 120


state 47
	conjunto_sentencias : '{' sentencias . '}'  (3)
	error_conjunto_sentencias : '{' sentencias .  (117)

	'}'  shift 100
	$end  reduce 117


state 48
	error_dountil : error '{' . bloque_de_sentencias_ejecutables '}' UNTIL condicion ':' asignacion_do_until ';'  (206)

	error  shift 81
	ID  shift 82
	IF  shift 11
	OUT  shift 12
	ASSIGN  shift 15
	BREAK  shift 101
	DISCARD  shift 17
	DO  shift 18
	DEFER  shift 19
	';'  shift 102
	'('  shift 20
	':'  shift 21
	.  error

	ejecutables  goto 103
	ejecutable  goto 26
	ejecutable_comun  goto 33
	ejecutable_defer  goto 34
	asignacion  goto 35
	seleccion  goto 36
	mensaje_pantalla  goto 37
	invocacion_discard  goto 38
	expresion_dountil  goto 39
	error_asignacion  goto 40
	error_mensaje_pantalla  goto 41
	error_invocacion_discard  goto 42
	etiqueta  goto 43
	error_dountil  goto 44
	bloque_de_sentencias_ejecutables  goto 104
	error_bloque_sent_ejecutables  goto 105


state 49
	error_lista_de_variables : error ',' . ID  (127)

	ID  shift 106
	.  error


state 50
	error_declarativa : error tipo . ';'  (125)

	';'  shift 107
	.  error


state 51
	error_expresion : error . '+' termino  (159)

	'+'  shift 108
	.  error


state 52
	factor : ID .  (55)
	invocacion : ID . '(' lista_parametros_reales ')'  (57)
	error_invocacion : ID . '(' lista_parametros_reales error  (167)

	'('  shift 109
	error  reduce 55
	THEN  reduce 55
	MAYOR_IGUAL  reduce 55
	MENOR_IGUAL  reduce 55
	DISTINTO  reduce 55
	'+'  reduce 55
	'-'  reduce 55
	'*'  reduce 55
	'/'  reduce 55
	'{'  reduce 55
	'}'  reduce 55
	';'  reduce 55
	')'  reduce 55
	':'  reduce 55
	'='  reduce 55
	'<'  reduce 55
	'>'  reduce 55


state 53
	factor : CTE_INT .  (49)

	.  reduce 49


state 54
	factor : CTE_DBL .  (50)

	.  reduce 50


state 55
	asignacion : ID ASSIGN . expresion ';'  (81)
	error_asignacion : ID ASSIGN . ';'  (174)
	error_asignacion : ID ASSIGN . expresion error  (175)

	error  shift 51
	ID  shift 52
	CTE_INT  shift 53
	CTE_DBL  shift 54
	TOF64  shift 56
	'-'  shift 57
	'*'  shift 58
	'/'  shift 59
	';'  shift 110
	.  error

	expresion  goto 111
	termino  goto 62
	error_expresion  goto 63
	factor  goto 64
	error_termino  goto 65
	invocacion  goto 66
	error_invocacion  goto 67


state 56
	expresion : TOF64 . '(' expresion ')'  (43)
	error_expresion : TOF64 . error expresion ')'  (160)
	error_expresion : TOF64 . '(' expresion error  (161)
	error_expresion : TOF64 . '(' ')'  (162)

	error  shift 112
	'('  shift 113
	.  error


state 57
	factor : '-' . CTE_INT $$1  (52)
	factor : '-' . CTE_DBL $$2  (54)

	CTE_INT  shift 114
	CTE_DBL  shift 115
	.  error


state 58
	error_termino : '*' . factor  (163)

	ID  shift 52
	CTE_INT  shift 53
	CTE_DBL  shift 54
	'-'  shift 57
	.  error

	factor  goto 116
	invocacion  goto 66
	error_invocacion  goto 67


state 59
	error_termino : '/' . factor  (165)

	ID  shift 52
	CTE_INT  shift 53
	CTE_DBL  shift 54
	'-'  shift 57
	.  error

	factor  goto 117
	invocacion  goto 66
	error_invocacion  goto 67


state 60
	error_funcion : ID '(' . lista_parametros ')' ':' tipo '{' cuerpo_funcion '}'  (129)
	lista_parametros : .  (25)

	error  shift 118
	UI16  shift 14
	F64  shift 16
	','  shift 119
	')'  reduce 25

	tipo  goto 120
	lista_parametros  goto 121
	parametros  goto 122
	parametro  goto 123
	error_lista_parametros  goto 124
	error_parametro  goto 125


state 61
	expresion : expresion . '+' termino  (41)
	expresion : expresion . '-' termino  (42)
	error_expresion : expresion . '+' error  (157)
	error_expresion : expresion . '-' error  (158)
	error_asignacion : ID expresion . ';'  (173)

	'+'  shift 126
	'-'  shift 127
	';'  shift 128
	.  error


state 62
	expresion : termino .  (40)
	termino : termino . '*' '(' factor ')'  (45)
	termino : termino . '/' '(' factor ')'  (46)
	error_termino : termino . '*'  (164)
	error_termino : termino . '/'  (166)

	'*'  shift 129
	'/'  shift 130
	error  reduce 40
	THEN  reduce 40
	MAYOR_IGUAL  reduce 40
	MENOR_IGUAL  reduce 40
	DISTINTO  reduce 40
	'+'  reduce 40
	'-'  reduce 40
	'{'  reduce 40
	'}'  reduce 40
	';'  reduce 40
	')'  reduce 40
	':'  reduce 40
	'='  reduce 40
	'<'  reduce 40
	'>'  reduce 40


state 63
	expresion : error_expresion .  (44)

	.  reduce 44


state 64
	termino : factor .  (47)

	.  reduce 47


state 65
	termino : error_termino .  (48)

	.  reduce 48


state 66
	factor : invocacion .  (56)

	.  reduce 56


state 67
	invocacion : error_invocacion .  (58)

	.  reduce 58

